sass/site.scss
html, body {
  height: 100%;
  font-family: "Hammersmith One", sans-serif;
}

body {
  background-color: #ffa040;
  background-image: radial-gradient(transparent, rgba(0,0,0,.3));
}


.addr-panel {
  float: none;
  margin: 50px auto;

  form {
    position: relative;
    margin: 100px 0;

    label {
      font-weight: normal;
    }

    input[type=text],
    input[type=email] {
      color: #fff;
      background-color: rgba(0,0,0,0.05);
      border-color: rgba(0,0,0,.3) rgba(0,0,0,0) rgba(255,255,255,0.5);

      &.error {
        background-color: rgba(255,0,0,.2);
        border-color: #cc0000;
      }
    }
  }
}


#add-button {
  display: block;
}


.form-group {
  position: relative;
}


.del-button {
  position: absolute;
  top: 0;
  right: 0;
  width: 16px;
  height: 16px;
  background: url(../img/close.svg) 0 0 no-repeat;
  background-size: contain;
}


.save-button {
  padding-top: 2px;
  padding-bottom: 2px;
  color: #404040;
  border-color: #000;
  background: #f0f0f0;
  background: -moz-linear-gradient(top,  #ffffff 0%, #e5e5e5 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e5e5e5));
  background: -webkit-linear-gradient(top,  #ffffff 0%,#e5e5e5 100%);
  background: -o-linear-gradient(top,  #ffffff 0%,#e5e5e5 100%);
  background: -ms-linear-gradient(top,  #ffffff 0%,#e5e5e5 100%);
  background: linear-gradient(to bottom,  #ffffff 0%,#e5e5e5 100%);
}


.add-button {
  padding-top: 2px;
  padding-bottom: 2px;
  margin: 0 auto;
}


label.error {
  position: absolute;
  top: 60px;
  left: 0;
}

